Økte timeout på WebClient fra 40s til 360s
* Pga noen seige kall til dokarkiv. Løses som mer spissede indekser senere
* Ryddet og refaktorerte kode